# forum-rust

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/auth/: jwt.rs  password.rs
src/db/: mod.rs
src/handlers/: auth.rs  comments.rs  mod.rs  posts.rs  user.rs
src/middleware/: token.rs
src/models/: comment.rs  post.rs  user.rs
src/routes/: auth.rs  comments.rs  mod.rs  posts.rs
src/states/: server.rs
